--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
 </nav>
 <section id="wizard">
     <div id="content-box-wizard">
-        <div id="questions-box">
+        <div id="questions-box" class="questions-box-appear-right">
             <h2 id="question-title" class="text-small-header"></h2>
             <p id="question-description" class="text-small-body"></p>
             <div id="choices-container">
