sections(1100).css separated + cta-nav-link scroll

--- a/chauffage/index.html
+++ b/chauffage/index.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/colors.css">
     <link rel="stylesheet" href="../css/buttons.css">
-    <link rel="stylesheet" href="../css/sections.css">
     <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/service-main.css">
-    <link rel="stylesheet" href="../css/service-main(830).css">
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/nav(830).css">
+    <link rel="stylesheet" href="../css/service-main.css">
+    <link rel="stylesheet" href="../css/service-main(1100).css">
+    <link rel="stylesheet" href="../css/service-main(830).css">
+    <link rel="stylesheet" href="../css/sections.css">
+    <link rel="stylesheet" href="../css/sections(1100).css">
 </head>
 <body onscroll="scrollfunction();" id="page">
 <nav id="navigation-bar" class="navigation-bar">
