--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="css/colors.css">
     <link rel="stylesheet" href="css/buttons.css">
     <link rel="stylesheet" href="css/input.css">
-    <link rel="stylesheet" href="css/sections.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/nav(830).css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/home-main.css">
     <link rel="stylesheet" href="css/home-main(1100).css">
     <link rel="stylesheet" href="css/home-main(830).css">
+    <link rel="stylesheet" href="css/sections.css">
+    <link rel="stylesheet" href="css/sections(1100).css">
 </head>
 <body onscroll="scrollfunction();" id="page">
 <nav id="navigation-bar" class="navigation-bar">
