background-patterns update

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../css/app-main(860).css">
     <link rel="stylesheet" href="../css/app-main(portrait).css">
 </head>
-<body>
+<body id="page-app" class="page">
 <nav id="navigation-bar" class="navigation-bar">
     <div id="content-box-nav">
         <a id="logo-nav-link" href="../index.html" target="_blank" tabindex="0" aria-label="Acceuil" onfocus="drop_down_services_out()">
