--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/sections.css">
     <link rel="stylesheet" href="css/sections(1100).css">
 </head>
-<body onscroll="scrollfunction();" id="page">
+<body onscroll="scrollfunction();" id="page-acceuil" class="page">
 <nav id="navigation-bar" class="navigation-bar">
     <div id="content-box-nav">
         <a id="logo-nav-link" href="#" tabindex="0" aria-label="Acceuil" onfocus="drop_down_services_out()">
