json data to html + send to php

--- a/about/index.html
+++ b/about/index.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="../css/colors.css">
     <link rel="stylesheet" href="../css/buttons.css">
     <link rel="stylesheet" href="../css/sections.css">
+    <link rel="stylesheet" href="../css/sections(1100).css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/about-main.css">
     <link rel="stylesheet" href="../css/about-main(830).css">
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/nav(830).css">
 </head>
-<body onscroll="scrollfunction();" id="page">
+<body onscroll="scrollfunction();" id="page-about" class="page">
 <nav id="navigation-bar" class="navigation-bar">
     <div id="content-box-nav">
         <a id="logo-nav-link" href="../" tabindex="0" aria-label="Acceuil" onfocus="drop_down_services_out()">
