--- a/chauffage/index.html
+++ b/chauffage/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meeco</title>
+    <title>Meeco | Chauffage</title>
     <link rel="shortcut icon" href="../images/logo/meeco-favicon.svg" type="image/svg">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/colors.css">
@@ -107,8 +107,8 @@
                         <span id="services-title" class="drop-down-title text-clickable">Nos services</span><span class="drop-down-arrow"></span>
                     </div>
                     <ul id="drop-down-content">
-                        <li id="isolation" class="drop-down-item text-clickable"><a id="isolation-link" class="drop-down-item-link" href="../isolation/" target="_blank" aria-label="Isoler ma maison" tabindex="0">Isoler ma maison</a></li>
-                        <li id="chauffage" class="drop-down-item text-clickable"><a id="chauffage-link" class="drop-down-item-link" href="../chauffage/" target="_blank" aria-label="Changer mon chauffage" tabindex="0">Changer mon chauffage</a></li>
+                        <li id="isolation" class="drop-down-item text-clickable"><a id="isolation-link" class="drop-down-item-link" href="../isolation/" target="_blank" aria-label="Isolation thermique" tabindex="0">Isolation thermique</a></li>
+                        <li id="chauffage" class="drop-down-item text-clickable"><a id="chauffage-link" class="drop-down-item-link" href="../chauffage/" target="_blank" aria-label="Chauffage" tabindex="0">Chauffage</a></li>
                         <li id="energie" class="drop-down-item text-clickable"><a id="energie-link" class="drop-down-item-link" href="../energie/" target="_blank" aria-label="Energie solaire" tabindex="0">Energie solaire</a></li>
                     </ul>
                 </li>
@@ -116,7 +116,7 @@
                     <a id="about-link" class="text-clickable link" href="../about/" target="_blank" tabindex="0" aria-label="Qui sommes nous?" onfocus="drop_down_services_out()">Qui sommes nous?</a>
                 </li>
                 <li id="cta-nav" class="nav-item">
-                    <a id="cta-nav-link" class="text-button button button-primary-special-private" href="../app/index.html" target="_blank" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
+                    <a id="cta-nav-link" class="text-button button button-primary-special-private" href="../app/?service=chauffage" target="_blank" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
                 </li>
         </div>
         </ul>
@@ -127,7 +127,7 @@
             <div id="chauffage-body" class="section-body">
                 <h1 id="chauffage-title" class="text-big-header section-title">Un chauffage plus efficace et moins énergivore</h1>
                 <p id="section-description-chauffage" class="text-big-body section-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum rutrum lobortis mollis. Quisque lacinia lorem eget turpis iaculis, in lobortis nulla tincidunt.</p>
-                <a id="cta-chauffage" href="../app/" class="text-button button button-primary-special-private section-cta">Changer mon chauffage</a>
+                <a id="cta-chauffage" href="../app/?service=chauffage" class="text-button button button-primary-special-private section-cta">Changer mon chauffage</a>
             </div>
             <span class="section-image" id="section-image-chauffage"></span>
     </div>
