--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                         <span id="services-title" class="drop-down-title text-clickable">Nos services</span><span class="drop-down-arrow"></span>
                     </div>
                     <ul id="drop-down-content">
-                        <li id="isolation" class="drop-down-item text-clickable"><a id="isolation-link" class="drop-down-item-link" href="./isolation/" target="_blank" aria-label="Isoler ma maison" tabindex="0">Isoler ma maison</a></li>
-                        <li id="chauffage" class="drop-down-item text-clickable"><a id="chauffage-link" class="drop-down-item-link" href="./chauffage/" target="_blank" aria-label="Changer mon chauffage" tabindex="0">Changer mon chauffage</a></li>
+                        <li id="isolation" class="drop-down-item text-clickable"><a id="isolation-link" class="drop-down-item-link" href="./isolation/" target="_blank" aria-label="Isolation thermique" tabindex="0">Isolation thermique</a></li>
+                        <li id="chauffage" class="drop-down-item text-clickable"><a id="chauffage-link" class="drop-down-item-link" href="./chauffage/" target="_blank" aria-label="Chauffage" tabindex="0">Chauffage</a></li>
                         <li id="energie" class="drop-down-item text-clickable"><a id="energie-link" class="drop-down-item-link" href="./energie/" target="_blank" aria-label="Energie solaire" tabindex="0">Energie solaire</a></li>
                     </ul>
                 </li>
