--- a/chauffage/index.html
+++ b/chauffage/index.html
@@ -129,7 +129,7 @@
                 <p id="section-description-chauffage" class="text-big-body section-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum rutrum lobortis mollis. Quisque lacinia lorem eget turpis iaculis, in lobortis nulla tincidunt.</p>
                 <a id="cta-chauffage" href="../app/?service=chauffage" class="text-button button button-primary-special-private section-cta">Changer mon chauffage</a>
             </div>
-            <span class="section-image" id="section-image-chauffage"></span>
+            <span class="section-image" id="section-image-chauffage"><img style="z-index: 1;" src="../images/services/changer_mon_chauffage.jpg" alt="Changer mon chauffage" width="600" height="400"></span>
     </div>
 </section>
 <footer id="page-footer" class="page-section" tabindex="0">
