--- a/energie/index.html
+++ b/energie/index.html
@@ -129,7 +129,7 @@
                 <p id="section-description-energie" class="text-big-body section-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum rutrum lobortis mollis. Quisque lacinia lorem eget turpis iaculis, in lobortis nulla tincidunt.</p>
                 <a id="cta-energie" href="../app/?service=energie" class="text-button button button-primary-special-private section-cta">Installer des panneaux solaires</a>
             </div>
-            <span class="section-image" id="section-image-energie"></span>
+            <span class="section-image" id="section-image-energie"><img style="z-index: 1;" src="../images/services/installation_panneaux_solaires.jpg" alt="Installation panneaux solaires" width="600" height="400"></span>
     </div>
 </section>
 <footer id="page-footer" class="page-section" tabindex="0">
