--- a/isolation/index.html
+++ b/isolation/index.html
@@ -129,7 +129,7 @@
                 <p id="section-description-isolation" class="text-big-body section-description">Avec les spécialistes d'isolation chez Meeco, assurez-vous d’<strong class="description-text-strong-word">économies</strong> sur votre facture de chauffage, d’une habitation plus <strong class="description-text-strong-word">écologique</strong> et du meilleur <strong class="text-strong-word">confort</strong>.</p>
                 <a id="cta-isolation" href="../app/?service=isolation" class="text-button button button-primary-special-private section-cta">Isoler ma maison</a>
             </div>
-            <span class="section-image" id="section-image-isolation"></span>
+            <span class="section-image" id="section-image-isolation"><img style="z-index: 1;" src="../images/services/isolation_des_combles.jpg" alt="isolation des combles" width="600" height="400"></span>
     </div>
 </section>
 <footer id="page-footer" class="page-section" tabindex="0">
