--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
 </nav>
 <header id="page-heading" class="page-section" tabindex="0">
     <div id="content-box-heading" class="content-box-page-section">
-        <h1 id="heading-title" class="text-page-title">Rénover votre maison<br/>sans vous inquiêter du coût</h1>
-        <p id="heading-body" class="text-title-body">Meeco aide la famille française le long de son parcours vers la transition énergitique.</p>
+        <h1 id="heading-title" class="text-page-title">La rénovation énergétique <br/>de votre foyer n'a jamais été aussi simple</h1>
+        <p id="heading-body" class="text-title-body">Jusqu'à 100 % de vos travaux financés grâce à MEECO.</p>
         <a id="cta-heading-link" class="text-button button button-primary-special-private" href="app/index.html"  target="_blank" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
     </div>
 </header>
 <section id="values-intro-section" class="page-section" tabindex="0">
     <div id="content-box-values-intro" class="content-box-page-section">
-        <h2 id="values-intro-title" class="text-big-header section-title">Vivez dans la maison que vous méritez avec Meeco.</h2>
+        <h2 id="values-intro-title" class="text-big-header section-title">Effectuer vos travaux d'économies d'énergie en toute simplicité par les ⭐ meilleurs artisans proches de chez vous.</h2>
         <img id="values-intro-house" src="images/visuals/maison.svg" alt="introduction illustration maison"/>
         <img id="values-intro-circle" src="images/visuals/circle.svg" alt="introduction illustration cercle"/>
     </div>
@@ -142,18 +142,18 @@
         <ul id="values-list">
             <li class="values-list-item">
                 <img src="images/visuals/economie-illustration.svg" class="card-image" alt="économie-illustration"/>
-                <h3 class="values-list-item-title text-card-title">Economisez votre consommation d'énergie</h3>
-                <p class="values-list-item-description text-card-body">Votre maison sera moins énergivore avec les produits de renovation énergitique.</p>
+                <h3 class="values-list-item-title text-card-title">Maîtriser, pour réduire sa consommation énergétique</h3>
+                <p class="values-list-item-description text-card-body">Moins gâchée pour moins dépenser, avec la mise en place d’actions concrètes qui vont vous aider à maîtriser et réduire votre consommation d’énergie.</p>
             </li>
             <li class="values-list-item">
                 <img src="images/visuals/ecologie-illustration.svg" class="card-image" alt="écologie-illustration"/>
-                <h3 class="values-list-item-title text-card-title">Habitez dans un milieu plus écologique</h3>
-                <p class="values-list-item-description text-card-body">Votre maison sera moins énergivore avec les produits de renovation énergitique.</p>
+                <h3 class="values-list-item-title text-card-title">Une habitation écologique est toujours économique </h3>
+                <p class="values-list-item-description text-card-body">En gardant votre confort, votre habitation devient beaucoup moins énergivore et votre empreinte écologique diminue avec zéro pollution.</p>
             </li>
             <li class="values-list-item">
                 <img src="images/visuals/confort-illustration.svg" class="card-image" alt="confort-illustration"/>
-                <h3 class="values-list-item-title text-card-title">Assurez une vie pleine de confort dans votre maison</h3>
-                <p class="values-list-item-description text-card-body">Votre maison sera moins énergivore avec les produits de renovation énergitique.</p>
+                <h3 class="values-list-item-title text-card-title">Assurez-vous une vie pleine de confort dans votre maison</h3>
+                <p class="values-list-item-description text-card-body">Améliorer le confort thermique de votre logement en bénéficiant d’une température agréable hiver comme été.</p>
             </li>
         </ul>
     </div>
@@ -164,20 +164,20 @@
         <ul id="services-section-list">
             <li class="services-section-list-item">
                 <img src="images/visuals/isolation-illustration.svg" class="card-image" alt="isolation-illustration"/>
-                <h3 class="services-section-list-item-title text-card-title">Isolation thermique</h3>
-                <p class="services-section-list-item-description text-card-body">Votre maison sera moins énergivore avec nos produits.</p>
+                <h3 class="services-section-list-item-title text-card-title">Isoler mon logement </h3>
+                <p class="services-section-list-item-description text-card-body">Je veux isoler ma maison et réduire les pertes de chaleur. </p>
                 <a href="./isolation/" class="services-section-list-item-link text-clickable button button-primary-normal-public" aria-label="En savoir plus" tabindex="0";>En savoir plus</a>
             </li>
             <li class="services-section-list-item">
                 <img src="images/visuals/chauffage-illustration.svg" class="card-image" alt="chauffage-illustration"/>
-                <h3 class="services-section-list-item-title text-card-title">Chauffage</h3>
+                <h3 class="services-section-list-item-title text-card-title">Changer mon chauffage</h3>
                 <p class="services-section-list-item-description text-card-body">Votre maison sera moins énergivore avec nos produits.</p>
                 <a href="./chauffage/" class="services-section-list-item-link text-clickable button button-primary-normal-public" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
             </li>
             <li class="services-section-list-item">
                 <img src="images/visuals/electricite-illustration.svg" class="card-image" alt="énergie-illustration"/>
-                <h3 class="services-section-list-item-title text-card-title">Energie solaire</h3>
-                <p class="services-section-list-item-description text-card-body">Votre maison sera moins énergivore avec nos produits.</p>
+                <h3 class="services-section-list-item-title text-card-title">Produire ma propre énergie</h3>
+                <p class="services-section-list-item-description text-card-body">Je veux produire ma propre énergie avec des panneaux solaires.</p>
                 <a href="./energie/" class="services-section-list-item-link text-clickable button button-primary-normal-public" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
             </li>
         </ul>
@@ -185,19 +185,37 @@
 </section>
 <section id="faq-section" class="page-section" tabindex="0">
     <div id="content-box-faq" class="content-box-page-section">
-        <h2 id="faq-title" class="text-big-header section-title">Avez vous des questions?<br/>Ne cherchez pas dehors!</h2>
+        <h2 id="faq-title" class="text-big-header section-title">Vous avez des questions ?</br>Ne cherchez plus, nos experts sont là pour répondre à toutes vos questions.</h2>
         <div id="faq-box">
             <ul id="faq-questions-list">
-                <li id="faq-question-1" class="text-clickable faq-question faq-question-active" aria-label="Question 1" onclick="show_answer(1)" onkeydown="show_answer(1)" tabindex="0"><span class="faq-question-arrow"></span><span class="question-body">Comment se font les travaux d'installation des pompes à chaleur chaleur chaleur chaleur?</span></li>
-                <li id="faq-answer-1" class="text-small-body faq-answer faq-answer-active"><b>Reponse:</b><br/>les travaux se font de maniere bien étudiée après une visite du logement par notre équipe d'installation qualifiée.<br/>les travaux se font de maniere bien étudiée après une visite du logement par notre équipe d'installation qualifiée.<br/>les travaux se font de maniere bien étudiée après une visite du logement par notre équipe d'installation qualifiée.</li>
-                <li id="faq-question-2" class="text-clickable faq-question" aria-label="Question 2" onclick="show_answer(2)" onkeydown="show_answer(2)" tabindex="0"><span class="faq-question-arrow"></span><span class="question-body">Comment se font les travaux d'installation des pompes?</span></li>
-                <li id="faq-answer-2" class="text-small-body faq-answer">Answer 2</li>
-                <li id="faq-question-3" class="text-clickable faq-question" aria-label="Question 3" onclick="show_answer(3)" onkeydown="show_answer(3)" tabindex="0"><span class="faq-question-arrow"></span><span class="question-body">Comment se font les travaux d'installation des pompes</span></li>
-                <li id="faq-answer-3" class="text-small-body faq-answer">Answer 3</li>
-                <li id="faq-question-4" class="text-clickable faq-question" aria-label="Question 4" onclick="show_answer(4)" onkeydown="show_answer(4)"tabindex="0"><span class="faq-question-arrow"></span><span class="question-body">Comment se font les travaux d'installation des pompes</span></li>
-                <li id="faq-answer-4" class="text-small-body faq-answer">Answer 4</li>
-                <li id="faq-question-5" class="text-clickable faq-question" aria-label="Question 5" onclick="show_answer(5)" onkeydown="show_answer(5)"tabindex="0"><span class="faq-question-arrow"></span><span class="question-body">Comment se font les travaux d'installation des pompes</span></li>
-                <li id="faq-answer-5" class="text-small-body faq-answer">Answer 5</li>
+                <li id="faq-question-1" class="text-clickable faq-question faq-question-active" aria-label="Question 1" onclick="show_answer(1)" onkeydown="show_answer(1)" tabindex="0"><span class="faq-question-arrow"></span><span class="question-body">Pourquoi est-il important de bien isoler sa maison ?</span></li>
+                <li id="faq-answer-1" class="text-small-body faq-answer faq-answer-active"><b>Reponse:</b><br/>L'isolation thermique de votre maison permet de réaliser d'importantes économies sur votre facture d'énergie, été comme hiver. Mais l'isolation thermique offre également l'avantage d'améliorer le confort thermique de l'intérieur de votre habitation.
+                    Une maison mal isolée peut subir des pertes de chaleur. Par exemple, avoir des combles mal isolés peut avoir comme conséquence 30% de pertes de chaleur.
+                    </li>
+                <li id="faq-question-2" class="text-clickable faq-question" aria-label="Question 2" onclick="show_answer(2)" onkeydown="show_answer(2)" tabindex="0"><span class="faq-question-arrow"></span><span class="question-body">Une Pompe à Chaleur air-eau, qu'est ce que c'est ?</span></li>
+                <li id="faq-answer-2" class="text-small-body faq-answer"><b>Reponse:</b><br/>La pompe à chaleur air-eau utilise l’air comme source d’énergie et convient aussi bien pour le chauffage que pour la production d’eau chaude. La PAC () Air-eau transforme les calories captées dans l’air en chaleur. Cette chaleur permet de chauffer de l’eau, qui circule ensuite dans les radiateurs ou à travers un plancher chauffant. C’est un système de chauffage écologique qui respecte l'environnement. On estime sa durée de vie d’environ 16 ans.</li>
+                <li id="faq-question-3" class="text-clickable faq-question" aria-label="Question 3" onclick="show_answer(3)" onkeydown="show_answer(3)" tabindex="0"><span class="faq-question-arrow"></span><span class="question-body">Puis-je bénéficier d’aides pour ma rénovation en 2021 ?</span></li>
+                <li id="faq-answer-3" class="text-small-body faq-answer"><b>Reponse:</b><br/>Effectivement, sous certaines conditions de ressources et techniques, vous pouvez prétendre à des aides pour financer vos travaux, par exemple :</br>
+                    ● MaPrime Rénov 2021 </br>
+                    ● Taux réduit de la TVA</br>
+                    ● Eco-prêt 0% pour 2021</br>
+                    ● Prime à l’amélioration de l’habitat</br>
+                    ● Subvention avec l’Agence Nationale pour l’Amélioration de l’Habitat</br>
+                    ● Le Certificats d’Economie d’Energie (CEE) 2021</br>
+                    ● Aide régional  
+                    </li>
+                <li id="faq-question-4" class="text-clickable faq-question" aria-label="Question 4" onclick="show_answer(4)" onkeydown="show_answer(4)"tabindex="0"><span class="faq-question-arrow"></span><span class="question-body">Qu’est-ce qu’un artisan certifié RGE ?</span></li>
+                <li id="faq-answer-4" class="text-small-body faq-answer"><b>Reponse:</b><br/>Le label RGE « Reconnu Garant de l'Environnement » est un label de qualité délivré à une 
+                    Entreprise qui remplit certains critères dans la réalisation de travaux d'économie d'énergie. 
+                    Pour l’obtention de primes pour vos travaux de rénovation énergétique, vous devrez faire appel à des artisans certifiés RGE (Reconnu Garant de l’Environnement). 
+                    Cette certification RGE n’est évidemment pas valable à vie. 
+                    Les artisans bénéficient du label pendant quatre ans puis sont soumis à une évaluation chaque année
+                    ss</li>
+                <li id="faq-question-5" class="text-clickable faq-question" aria-label="Question 5" onclick="show_answer(5)" onkeydown="show_answer(5)"tabindex="0"><span class="faq-question-arrow"></span><span class="question-body">L'autoconsommation Photovoltaïque quel intérêt ? </span></li>
+                <li id="faq-answer-5" class="text-small-body faq-answer"><b>Reponse:</b><br/>L'autoconsommation photovoltaïque s'inscrit dans une démarche respectueuse de l'environnement, elle contribue à la préservation des ressources naturelles. 
+                    Elle fait actuellement partie de l’un des meilleurs moyens économiques pour diminuer la facture électrique en profitant de l’énergie produite gratuitement. 
+                    Cependant il est important de regrouper plusieurs conditions nécessaires à un rendement optimal, une étude de qualité doit être effectuée avant pour déterminer la faisabilité du projet, pour ainsi obtenir une estimation précise de la production électrique pouvant être consommée.
+                    </li>
             </ul>
         </div>
     </div>
@@ -248,8 +266,8 @@
 </section>
 <section id="newsletter-section" class="page-section" tabindex="0">
     <div id="content-box-newsletter" class="content-box-page-section">
-        <h2 id="newsletter-title" class="text-small-header section-title">Restez toujours au courant des nouveautés de renovation.</h2>
-        <p id="newsletter-description" class="text-small-body">Inscrivez vous à notre Newsletter et serez le premier à recevoir toutes nos actualiés et toute nouveauté de renovation énergetique.</p>
+        <h2 id="newsletter-title" class="text-small-header section-title">Restez informé des nouveautés Meeco.</h2>
+        <p id="newsletter-description" class="text-small-body">Inscrivez-vous à notre Newsletter et soyez le premier informé de toutes nos actualités et nouveautés.</p>
         <form class="input-email-form" id="newsletter-form" action="">
             <div id="email-input-box" class="input-box">
                 <label id="newsletter-email-input-label" for="newsletter-email-input" class="text-label input-label">Email</label>
@@ -269,7 +287,7 @@
             <li><a href="./about/" class="important-link text-footer" target="_blank" area-label="Qui sommes nous?" tabindex="0">Qui sommes nous?</a></li>
             <li><a href="#" class="important-link text-footer" target="_blank" area-label="Nous contacter" tabindex="0">Nous contacter</a></li>
         </ul>
-        <small id="copyright-notice" class="text-footer">copyright &copy;2021</small>
+        <small id="copyright-notice" class="text-footer">Copyright &copy;2021 <a href="https://solusaas.com" id="copyright-notice" target="_blank" area-label="solusaas" tabindex="0">SOLUSAAS</a></small>
     </div>
 </footer>
 <div id="pattern"></div>
