--- a/energie/index.html
+++ b/energie/index.html
@@ -107,9 +107,9 @@
                         <span id="services-title" class="drop-down-title text-clickable">Nos services</span><span class="drop-down-arrow"></span>
                     </div>
                     <ul id="drop-down-content">
-                        <li id="isolation" class="drop-down-item text-clickable"><a id="isolation-link" class="drop-down-item-link" href="../isolation/" target="_blank" aria-label="Isolation thermique" tabindex="0">Isolation thermique</a></li>
-                        <li id="chauffage" class="drop-down-item text-clickable"><a id="chauffage-link" class="drop-down-item-link" href="../chauffage/" target="_blank" aria-label="Chauffage" tabindex="0">Chauffage</a></li>
-                        <li id="energie" class="drop-down-item text-clickable"><a id="energie-link" class="drop-down-item-link" href="../energie/" target="_blank" aria-label="Energie solaire" tabindex="0">Energie solaire</a></li>
+                        <li id="isolation" class="drop-down-item text-clickable"><a id="isolation-link" class="drop-down-item-link" href="../isolation/"  aria-label="Isolation thermique" tabindex="0">Isolation thermique</a></li>
+                        <li id="chauffage" class="drop-down-item text-clickable"><a id="chauffage-link" class="drop-down-item-link" href="../chauffage/"  aria-label="Chauffage" tabindex="0">Chauffage</a></li>
+                        <li id="energie" class="drop-down-item text-clickable"><a id="energie-link" class="drop-down-item-link" href="../energie/"  aria-label="Energie solaire" tabindex="0">Energie solaire</a></li>
                     </ul>
                 </li>
                 <li id="about" class="nav-item">
