click to call script

--- a/isolation/index.html
+++ b/isolation/index.html
@@ -148,5 +148,7 @@
 <script src="../scripts/drop-down.js"></script>
 <script src="../scripts/menu.js"></script>
 <script src="../scripts/resize.js"></script>
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-912952bd-8b8a-482f-afda-59a444fb572e"></div>
 </body>
 </html>
