--- a/app/index.html
+++ b/app/index.html
@@ -87,10 +87,13 @@
 <div id="progress-bar">
     <div id="progress" data-progress="0"></div>
 </div>
+<div class="elfsight-app-912952bd-8b8a-482f-afda-59a444fb572e"></div>
 </body>
 <script src="../scripts/update.js"></script>
 <script src="../scripts/input.js"></script>
 <script src="../scripts/pop-up.js"></script>
 <script src="../scripts/cancel-app.js"></script>
 <script src="../scripts/close-app.js"></script>
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+
 </html>
