--- a/chauffage/index.html
+++ b/chauffage/index.html
@@ -143,10 +143,13 @@
         </ul>
         <small id="copyright-notice" class="text-footer">copyright &copy;2021</small>
     </div>
+    <div class="elfsight-app-912952bd-8b8a-482f-afda-59a444fb572e"></div>
 </footer>
 <script src="../scripts/scroll.js"></script>
 <script src="../scripts/drop-down.js"></script>
 <script src="../scripts/menu.js"></script>
 <script src="../scripts/resize.js"></script>
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+
 </body>
 </html>
