--- a/isolation/index.html
+++ b/isolation/index.html
@@ -129,7 +129,7 @@
                 <p id="section-description-isolation" class="text-big-body section-description">Avec les spécialistes d'isolation chez Meeco, assurez-vous d’<strong class="description-text-strong-word">économies</strong> sur votre facture de chauffage, d’une habitation plus <strong class="description-text-strong-word">écologique</strong> et du meilleur <strong class="text-strong-word">confort</strong>.</p>
                 <a id="cta-isolation" href="../app/?service=isolation" class="text-button button button-primary-special-private section-cta">Isoler ma maison</a>
             </div>
-            <span class="section-image" id="section-image-isolation"><img style="z-index: 1;" src="../images/services/isolation_des_combles.jpg" alt="isolation des combles" width="600" height="400"></span>
+            <span class="section-image" id="section-image-isolation"></span>
     </div>
 </section>
 <footer id="page-footer" class="page-section" tabindex="0">
@@ -141,7 +141,7 @@
             <li><a href="../about/" class="important-link text-footer" target="_blank" area-label="Qui sommes nous?" tabindex="0">Qui sommes nous?</a></li>
             <li><a href="#" class="important-link text-footer" target="_blank" area-label="Nous contacter" tabindex="0">Nous contacter</a></li>
         </ul>
-        <small id="copyright-notice" class="text-footer">copyright &copy;2021</small>
+        <small id="copyright-notice" class="text-footer">Copyright &copy;2021 <a href="https://solusaas.com" target="_blank" area-label="solusaas" tabindex="0">SOLUSAAS</a></small>
     </div>
 </footer>
 <script src="../scripts/scroll.js"></script>
