--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@
 <body onscroll="scrollfunction();" id="page-about" class="page">
 <nav id="navigation-bar" class="navigation-bar">
     <div id="content-box-nav">
-        <a id="logo-nav-link" href="https://meeco.fr" tabindex="0" aria-label="Acceuil" onfocus="drop_down_services_out()">
+        <a id="logo-nav-link" href="../" tabindex="0" aria-label="Acceuil" onfocus="drop_down_services_out()">
             <svg version="1.1" id="logo-nav" aria-label="Meeco logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
             viewBox="0 0 1600 500" style="enable-background:new 0 0 1600 500;" xml:space="preserve">
                 <style type="text/css">
@@ -167,27 +167,25 @@
                     <p class="value-description text-small-body">Nous nous soucions d'économiser les frais et le coût de la rénovation énergétique pour la famille française.</p>
                 </li>
             </ul>
-            <span class="section-image" id="section-image-values"><img style="z-index: 1;" src="../images/about/valeurs.jpg" alt="isolation des combles" width="600" height="400"></span>
-        </div>
-    </div>
-</section>
-<section id="vision-section" class="page-section" tabindex="0">
-    <div id="content-box-vision" class="content-box-page-section">
-        <h2 id="vision-title" class="text-small-header section-title">Notre mission</h2>
-        <div id="vision-body">
-            
-            <blockquote id="section-quote-vision" class="section-quote text-big-body">Notre mission est de rendre la maison de la famille française plus confortable et plus respectueuse de l'environnement. </blockquote>
-            <span class="section-image" id="section-image-values"><img style="z-index: 1;" src="../images/about/mission.jpg" alt="isolation des combles" width="600" height="400"></span>
+            <span class="section-image" id="section-image-values"></span>
         </div>
     </div>
 </section>
 <section id="mission-section" class="page-section" tabindex="0">
     <div id="content-box-mission" class="content-box-page-section">
-        <h2 id="mission-title" class="text-small-header section-title">Notre vision</h2>
+        <h2 id="mission-title" class="text-small-header section-title">Notre mission</h2>
         <div id="mission-body">
-            
-            <blockquote id="section-quote-mission" class="section-quote text-big-body">Notre vision est de transformer un million de maisons françaises en une maison écologique au cours des dix prochaines années.</blockquote>
-            <span class="section-image" id="section-image-values"><img style="z-index: 1;" src="../images/about/vision.jpg" alt="isolation des combles" width="600" height="400"></span>
+            <blockquote id="section-quote-mission" class="section-quote text-big-body">Notre mission est de rendre la maison de la famille française plus confortable et plus respectueuse de l'environnement. </blockquote>
+            <span class="section-image" id="section-image-mission"></span>
+        </div>
+    </div>
+</section>
+<section id="vision-section" class="page-section" tabindex="0">
+    <div id="content-box-vision" class="content-box-page-section">
+        <h2 id="vision-title" class="text-small-header section-title">Notre vision</h2>
+        <div id="vision-body">
+            <blockquote id="section-quote-vision" class="section-quote text-big-body">Notre vision est de transformer un million de maisons françaises en une maison écologique au cours des dix prochaines années.</blockquote>
+            <span class="section-image" id="section-image-vision"></span>
         </div>
     </div>
 </section>
@@ -200,7 +198,7 @@
             <li><a href="../about/" class="important-link text-footer" target="_blank" area-label="Qui sommes nous?" tabindex="0">Qui sommes nous?</a></li>
             <li><a href="#" class="important-link text-footer" target="_blank" area-label="Nous contacter" tabindex="0">Nous contacter</a></li>
         </ul>
-        <small id="copyright-notice" class="text-footer">copyright &copy;2021</small>
+        <small id="copyright-notice" class="text-footer">Copyright &copy;2021 <a href="https://solusaas.com" target="_blank" area-label="solusaas" tabindex="0">SOLUSAAS</a></small>
     </div>
     <div class="elfsight-app-912952bd-8b8a-482f-afda-59a444fb572e"></div>
 </footer>
