--- a/chauffage/index.html
+++ b/chauffage/index.html
@@ -129,7 +129,7 @@
                 <p id="section-description-chauffage" class="text-big-body section-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum rutrum lobortis mollis. Quisque lacinia lorem eget turpis iaculis, in lobortis nulla tincidunt.</p>
                 <a id="cta-chauffage" href="../app/?service=chauffage" class="text-button button button-primary-special-private section-cta">Changer mon chauffage</a>
             </div>
-            <span class="section-image" id="section-image-chauffage"><img style="z-index: 1;" src="../images/services/changer_mon_chauffage.jpg" alt="Changer mon chauffage" width="600" height="400"></span>
+            <span class="section-image" id="section-image-chauffage"></span>
     </div>
 </section>
 <footer id="page-footer" class="page-section" tabindex="0">
@@ -141,7 +141,7 @@
             <li><a href="../about/" class="important-link text-footer" target="_blank" area-label="Qui sommes nous?" tabindex="0">Qui sommes nous?</a></li>
             <li><a href="#" class="important-link text-footer" target="_blank" area-label="Nous contacter" tabindex="0">Nous contacter</a></li>
         </ul>
-        <small id="copyright-notice" class="text-footer">copyright &copy;2021</small>
+        <small id="copyright-notice" class="text-footer">Copyright &copy;2021 <a href="https://solusaas.com" target="_blank" area-label="solusaas" tabindex="0">SOLUSAAS</a></small>
     </div>
     <div class="elfsight-app-912952bd-8b8a-482f-afda-59a444fb572e"></div>
 </footer>
