--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <li><a href="./about/" class="important-link text-footer" target="_blank" area-label="Qui sommes nous?" tabindex="0">Qui sommes nous?</a></li>
             <li><a href="#" class="important-link text-footer" target="_blank" area-label="Nous contacter" tabindex="0">Nous contacter</a></li>
         </ul>
-        <small id="copyright-notice" class="text-footer">Copyright &copy;2021 <a href="https://solusaas.com" id="copyright-notice" target="_blank" area-label="solusaas" tabindex="0">SOLUSAAS</a></small>
+        <small id="copyright-notice" class="text-footer">Copyright &copy;2021 <a href="https://solusaas.com" target="_blank" area-label="solusaas" tabindex="0">SOLUSAAS</a></small>
     </div>
     
 </footer>
