--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
 <body id="page-app" class="page">
 <nav id="navigation-bar" class="navigation-bar">
     <div id="content-box-nav">
-        <a id="logo-nav-link" href="../index.html" target="_blank" tabindex="0" aria-label="Acceuil" onfocus="drop_down_services_out()">
+        <a id="logo-nav-link" href="../" target="_blank" tabindex="0" aria-label="Acceuil" onfocus="drop_down_services_out()">
             <svg version="1.1" id="logo-nav" aria-label="Meeco logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
             viewBox="0 0 1600 500" style="enable-background:new 0 0 1600 500;" xml:space="preserve">
                 <style type="text/css">
