--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <a id="about-link" class="text-clickable link" href="./about/" target="_blank" tabindex="0" aria-label="Qui sommes nous?" onfocus="drop_down_services_out()">Qui sommes nous?</a>
                 </li>
                 <li id="cta-nav" class="nav-item">
-                    <a id="cta-nav-link" class="text-button button button-primary-special-private" href="./app/index.html" target="_blank" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
+                    <a id="cta-nav-link" class="text-button button button-primary-special-private" href="./app/" target="_blank" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
                 </li>
         </div>
         </ul>
@@ -127,7 +127,7 @@
     <div id="content-box-heading" class="content-box-page-section">
         <h1 id="heading-title" class="text-page-title">La rénovation énergétique <br/>de votre foyer n'a jamais été aussi simple</h1>
         <p id="heading-body" class="text-title-body">Jusqu'à 100 % de vos travaux financés grâce à MEECO.</p>
-        <a id="cta-heading-link" class="text-button button button-primary-special-private" href="app/index.html"  target="_blank" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
+        <a id="cta-heading-link" class="text-button button button-primary-special-private" href="app/"  target="_blank" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
     </div>
 </header>
 <section id="values-intro-section" class="page-section" tabindex="0">
@@ -285,7 +285,7 @@
             <li><a href="#" class="important-link text-footer" target="_blank" area-label="Mentions légales" tabindex="0">Mentions légales</a></li>
             <li><a href="#" class="important-link text-footer" target="_blank" area-label="Politique de la vie privée" tabindex="0">Politique de la vie privée</a></li>
             <li><a href="./about/" class="important-link text-footer" target="_blank" area-label="Qui sommes nous?" tabindex="0">Qui sommes nous?</a></li>
-            <li><a href="#" class="important-link text-footer" target="_blank" area-label="Nous contacter" tabindex="0">Nous contacter</a></li>
+            <li><a href="./contact/" class="important-link text-footer" target="_blank" area-label="Nous contacter" tabindex="0">Nous contacter</a></li>
         </ul>
         <small id="copyright-notice" class="text-footer">Copyright &copy;2021 <a href="https://solusaas.com" target="_blank" area-label="solusaas" tabindex="0">SOLUSAAS</a></small>
     </div>
