contact-page pattern

--- a/contact/index.html
+++ b/contact/index.html
@@ -137,7 +137,7 @@
                     <p id="user-email-input-hint" class="text-input-hint input-hint">Entrer une adresse électronique valide.</p>
                 </div>
                 <div class="input-box input-text-box">
-                    <label id="user-message-input-label" for="user-name-input" class="text-label input-label input-label-required">Votre message<span class="required-asterisk">*</span></label>
+                    <label id="user-message-input-label" for="user-message-input" class="text-label input-label input-label-required">Votre message<span class="required-asterisk">*</span></label>
                     <textarea name="message" id="user-message-input" class="text-input input input-text" placeholder="Saisissez votre message ici..." required oninput="update_app(this)" rows="5"></textarea>
                     <p id="user-message-input-hint" class="text-input-hint input-hint">Ce champs est requis.</p>
                 </div>
