pages content change

--- a/about/index.html
+++ b/about/index.html
@@ -123,30 +123,18 @@
 </nav>
 <section id="conviction-section" class="page-section" tabindex="0">
     <div id="content-box-conviction" class="content-box-page-section">
-        <h2 id="conviction-title" class="text-small-header section-title">Notre conviction</h2>
-        <ul class="quote-cards-list">
-            <li class="quote-card">
-                <span title="Photo de Mohamed LAZRAK" class="quote-card-photo" id="quote-card-photo-1"></span>
-                <span class="quote-card-name text-big-body">Mohamed LAZRAK</span>
-                <span class="quote-card-role text-notification">SOLUSAAS co-fondateur</span>
-                <blockquote class="quote-card-body text-min-body">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore</blockquote>
-                <adress class="quote-card-author text-notification">_Mohamed LAZRAK</adress>
-            </li>
-            <li class="quote-card">
-                <span title="Photo de Redouane NASSER" class="quote-card-photo" id="quote-card-photo-2"></span>
-                <span class="quote-card-name text-big-body">Redouane NASSER</span>
-                <span class="quote-card-role text-notification">RKCZ Directeur Général</span>
-                <blockquote class="quote-card-body text-min-body">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore</blockquote>
-                <adress class="quote-card-author text-notification">_Redouane NASSER</adress>
-            </li>
-            <li class="quote-card">
-                <span title="Photo de Rachid ALAMI" class="quote-card-photo" id="quote-card-photo-3"></span>
-                <span class="quote-card-name text-big-body">Rachid ALAMI</span>
-                <span class="quote-card-role text-notification">Digital Vision PDG</span>
-                <blockquote class="quote-card-body text-min-body">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore</blockquote>
-                <adress class="quote-card-author text-notification">_Rachid ALAMI</adress>
-            </li>
-        </ul>
+        <h2 id="conviction-title" class="text-small-header section-title">MEECO BY Econ'home :</h2>
+        <div id="vision-body">
+            <blockquote style="width: 1040px;" id="section-quote-vision" class="section-quote text-big-body">
+
+                Econ'home est une société située au sud-ouest de la France à Toulouse.</br>
+                Spécialisée dans les études énergétiques, elle propose depuis plusieurs années des solutions économiques et ergonomiques afin de réduire vos factures d’énergie et d’améliorer votre confort.</br>
+                Disposant des certifications RGE QualiPv et Qualipac, Econ’home Énergie vous offre la garantie de produire votre propre énergie verte en vous accompagnant le long de cette démarche pour vous livrer un projet abouti : installation, démarches administratives et garanties complètes.</br>
+                
+                Passer à l’énergie renouvelable n’a jamais été aussi simple, le saviez-vous ? 
+                </blockquote>
+            
+        </div>
     </div>
 </section>
 <section id="values-section" class="page-section" tabindex="0">
