--- a/app/index.html
+++ b/app/index.html
@@ -84,6 +84,7 @@
         </div>
     </div>
 </section>
+<div class="elfsight-app-912952bd-8b8a-482f-afda-59a444fb572e"></div>
 <div id="progress-bar">
     <div id="progress" data-progress="0"></div>
 </div>
@@ -94,5 +95,7 @@
 <script src="../scripts/pop-up.js"></script>
 <script src="../scripts/cancel-app.js"></script>
 <script src="../scripts/close-app.js"></script>
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+
 
 </html>
