--- a/chauffage/index.html
+++ b/chauffage/index.html
@@ -125,8 +125,12 @@
 <section id="chauffage-section" class="page-section" tabindex="0">
         <div id="content-box-chauffage" class="content-box-page-section">
             <div id="chauffage-body" class="section-body">
-                <h1 id="chauffage-title" class="text-big-header section-title">Un chauffage plus efficace et moins énergivore</h1>
-                <p id="section-description-chauffage" class="text-big-body section-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum rutrum lobortis mollis. Quisque lacinia lorem eget turpis iaculis, in lobortis nulla tincidunt.</p>
+                <h1 id="chauffage-title" class="text-big-header section-title">Optez pour nos solution de chauffage</h1>
+                <p id="section-description-chauffage" class="text-big-body section-description">La consommation de chauffage représente en moyenne 65 % du budget d’énergie annuel d’un logement.  Comment alors bien chauffer votre maison tout en diminuant cette part ? </br>
+ 
+                </br>Le niveau de prime selon le type de travaux est déterminé en fonction des ressources du ménage. </br></br>Pour permettre aux foyers français de bénéficier d’un équipement de chauffage plus performant et moins énergivore. </br>
+            </br> L’avantage d'une bonne installation de chauffage est l'amélioration de votre confort en réalisant des économies durables tout en diminuant votre consommation d'énergie. 
+                    </p>
                 <a id="cta-chauffage" href="../app/?service=chauffage" class="text-button button button-primary-special-private section-cta">Changer mon chauffage</a>
             </div>
             <span class="section-image" id="section-image-chauffage"></span>
