--- a/energie/index.html
+++ b/energie/index.html
@@ -126,7 +126,10 @@
         <div id="content-box-energie" class="content-box-page-section">
             <div id="energie-body" class="section-body">
                 <h1 id="energie-title" class="text-big-header section-title">Un energie plus efficace et moins énergivore</h1>
-                <p id="section-description-energie" class="text-big-body section-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum rutrum lobortis mollis. Quisque lacinia lorem eget turpis iaculis, in lobortis nulla tincidunt.</p>
+                <p id="section-description-energie" class="text-big-body section-description">L’autoconsommation, c’est la production de sa propre électricité en installant des panneaux solaires photovoltaïques chez soi. Cette technologie permet de faire des économies d’énergie quotidiennement, avec zéro pollution. 
+                    Elle est une solution proposée pour répondre au problème de grosses factures électriques et contribue à gagner en indépendance vis à vis du réseau. 
+                    
+                    </p>
                 <a id="cta-energie" href="../app/?service=energie" class="text-button button button-primary-special-private section-cta">Installer des panneaux solaires</a>
             </div>
             <span class="section-image" id="section-image-energie"></span>
