typo rgdp *rgpd

--- a/cgu/index.html
+++ b/cgu/index.html
@@ -266,7 +266,7 @@
         <img id="logo-footer" src="../images/logo/meeco-white.svg" alt="logo Meeco blanc"/>
         <ul id="footer-list">
             <li><a href="#informations-legales" class="important-link text-footer" area-label="Informations légales" tabindex="0">Informations légales</a></li>
-            <li><a href="#rgdp" class="important-link text-footer" area-label="Politique de la vie privée" tabindex="0">Politique de la vie privée</a></li>
+            <li><a href="#rgpd" class="important-link text-footer" area-label="Politique de la vie privée" tabindex="0">Politique de la vie privée</a></li>
             <li><a href="../about/" class="important-link text-footer" target="_blank" area-label="Qui sommes nous?" tabindex="0">Qui sommes nous?</a></li>
             <li><a href="../contact/" class="important-link text-footer" target="_blank" area-label="Nous contacter" tabindex="0">Nous contacter</a></li>
         </ul>
