--- a/chauffage/index.html
+++ b/chauffage/index.html
@@ -141,7 +141,7 @@
         <img id="logo-footer" src="../images/logo/meeco-white.svg" alt="logo Meeco blanc"/>
         <ul id="footer-list">
             <li><a href="../cgu/#informations-legales" class="important-link text-footer" target="_blank" area-label="informations légales" tabindex="0">Informations légales</a></li>
-            <li><a href="../cgu/#rgdp" class="important-link text-footer" target="_blank" area-label="Politique de la vie privée" tabindex="0">Politique de la vie privée</a></li>
+            <li><a href="../cgu/#rgpd" class="important-link text-footer" target="_blank" area-label="Politique de la vie privée" tabindex="0">Politique de la vie privée</a></li>
             <li><a href="../about/" class="important-link text-footer" target="_blank" area-label="Qui sommes nous?" tabindex="0">Qui sommes nous?</a></li>
             <li><a href="../contact/" class="important-link text-footer" target="_blank" area-label="Nous contacter" tabindex="0">Nous contacter</a></li>
         </ul>
